# Teck

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt  levelDataLoader.c  levelDataLoader.h  player.c  player.h
editor/: CMakeLists.txt  editorState.h  main.cpp
game/: CMakeLists.txt  main.c
spec/: ExpandedFileFormat.md
